--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TRIOVE Website</title>
+  <title>TRIOVE</title>
 </head>
 
 
@@ -15,4 +15,3 @@
 </body>
 
 </html>
-
